# juju_rand_game

./: .gitignore  CONTRIBUTING.md  README.md  notes.txt
.github/workfows/: ci_cpp.yml  ci_idk.yml  ci_rust.yml
ai/: ai_player.cpp
analysis/game_theory/: README.md  another_one.md  comprehensive_analysis.md  comprehensive_analysis.py
cpp/: README.md  Randomness.md  ai-player.cpp  base-game.cpp  cheaty-balanced.cpp  dice-roll.cpp  fast-version.cpp  interactive-base-game.cpp  interactive-extended-game.cpp  main.cpp  mainmain.cpp  multithreaded-sim.cpp  proper-random-base-game.cpp  slow-version.cpp  ultra-cheaty.cpp  ultra-fast.cpp  ultra-optimized.cpp
game_theory/: README.md  comprehensive_analysis.md
ml/: dqn_agent.py  train_dqn.py
rust/: README.md  ai-player.rs  base.rs  cargo.toml  composite-strategies.rs  composite-strategy-2.rs  dice-roll.rs  fast-base-game.rs  fast.rs  game-strategies.rs  interactive-base-game.rs  interactive-extended-game.rs  main.rs  mainmain.rs  multithread-simulation.rs  randomness.md  requrements.txt  simulation-2.rs  simulation-multi-rounds.rs  slow-base.rs  smiulation.rs  ultra-cheaty.rs  ultra-fast.rs  ultra-optimized.rs
simulation/: CMakeLists.txt  README.md
simulation/include/: distributed_simulator.hpp
simulation/parallel/: README.md  distributed_simulator.cpp  distributed_simulator.rs
simulation/src/: distributed_simulator.cpp  optimized_simulator.cpp
varification/: game_rules_verification.v
visualization/: README.md  game_visualizer.py  sth.py  strategy_analyzer.py  tournament_visualizer.py
web/: app.py
(+59 files in other folders)
